ubah index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <tr><td>Daftar anggota</td></tr>
       <tr><td><a href = "1908107010017.html">1908107010017</a></td></tr>
       <tr><td><a href="1908107010025.html">1908107010025</a></td></tr>
+      <tr><td><a href="1908107010031.html">1908107010031</a></td></tr>
     </table>
-    <a href="1908107010031.html">Siti Mawaddah</a>
   </body>
 </html>
